# SortingHat-AI

./: ReadMe.md  pyproject.toml
.github/workflows/: ci.yml
src/sortinghat/: __init__.py  __main__.py  cli.py  llm.py  models.py  parser.py  pipeline.py  scoring.py
tests/: test_cli.py  test_models.py  test_parser.py  test_pipeline.py  test_scorer.py
