[project]
name = "sortinghat-ai"
version = "0.1.0"
description = "Lightweight resume parsing and matching pipeline"
authors = [{ name = "SortingHat AI" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tests = ["pytest>=7.4"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
