[project]
name = "sortinghat-ai"
version = "0.2.0"
description = "Resume parsing, scoring, and LLM-enhanced job matching pipeline"
authors = [{ name = "SortingHat AI" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tests = ["pytest>=7.4"]
pdf = ["pdfplumber>=0.10"]
docx = ["python-docx>=1.0"]
all = ["pdfplumber>=0.10", "python-docx>=1.0"]

[project.scripts]
sortinghat = "sortinghat.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
